--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "745622f0",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "import numpy as np\n",
+    "import string\n",
+    "import numpy as np"
    ]
   },
   {
@@ -43,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "adfa6785",
    "metadata": {},
    "outputs": [
@@ -389,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e7128ee9",
    "metadata": {},
    "outputs": [
@@ -460,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4bd4e389",
    "metadata": {},
    "outputs": [
@@ -698,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3cb08a7f",
    "metadata": {},
    "outputs": [
@@ -736,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6dc00476",
    "metadata": {},
    "outputs": [
@@ -820,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5a2f4756",
    "metadata": {},
    "outputs": [
@@ -856,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bcbc63aa",
    "metadata": {},
    "outputs": [
@@ -884,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d5fd4ff2",
    "metadata": {},
    "outputs": [
@@ -920,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c8c02b1e",
    "metadata": {},
    "outputs": [
@@ -955,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8fa23e40",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e0912b28",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "e5c3a604",
    "metadata": {},
    "outputs": [
@@ -2141,27 +2147,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "192dd3a0",
-   "metadata": {},
-   "source": [
-    "## Include Library"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bd0f331",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# importing necessary libraries for deep learning\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "f655c914",
@@ -2386,10 +2371,6 @@
     }
    ],
    "source": [
-    "# Import library\n",
-    "import string\n",
-    "import numpy as np\n",
-    "\n",
     "# Membuat list huruf a-z\n",
     "letters = list(string.ascii_lowercase)\n",
     "n_letters = len(letters)\n",
@@ -2415,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "80267996",
    "metadata": {},
    "outputs": [
@@ -2450,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ced98bae",
    "metadata": {},
    "outputs": [
@@ -2529,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "88d0876a",
    "metadata": {},
    "outputs": [
@@ -2676,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "96c74f4f",
    "metadata": {},
    "outputs": [
@@ -2803,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "bf95a5e8",
    "metadata": {},
    "outputs": [
@@ -2848,7 +2829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "0f2ced29",
    "metadata": {},
    "outputs": [
@@ -2964,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "cc5b0722",
    "metadata": {},
    "outputs": [
@@ -3089,7 +3070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "566adfd1",
    "metadata": {},
    "outputs": [
@@ -3130,7 +3111,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "\n",
     "\n",
     "# Pilih user acak (dalam bentuk string, bukan integer)\n",
     "user_id = df_cv_first.user.sample(1).iloc[0]\n",
@@ -3157,7 +3138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "cf830f77",
    "metadata": {},
    "outputs": [
